<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#EEEEEE">

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#4BA6A7"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/title_btn_back"
            android:onClick="register_back" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/back"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/logo"
                android:src="@drawable/bookicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/bookdetail"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivSave"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/logo"
            android:src="@drawable/save"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp" />


    </RelativeLayout>
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="2"
        android:stretchColumns="1"
        android:background="#FFFFFF"
        android:layout_marginBottom="10dp">
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/roomname"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/spSex"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/txt_style"
                android:entries="@array/roomname"
                android:paddingLeft="15dp"
                android:prompt="@string/tips" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/place"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/cantchan"
                android:textSize="16sp"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/manager"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etSupervisor"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" />
        </TableRow>



    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="2"
        android:stretchColumns="1"
        android:background="#FFFFFF"
        android:layout_marginBottom="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etMeetingDate"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/sttime" />

            <EditText
                android:id="@+id/etBeginTime"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/endtime"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etEndTime"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="2"
        android:stretchColumns="1"
        android:background="#FFFFFF"
        android:layout_marginBottom="10dp">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/describe"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:textSize="18sp"
                android:gravity="top"
                android:background="@drawable/txt_style"/>
        </TableRow>




    </TableLayout>
    

</LinearLayout>
