<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.dbis.reservationsystem.BookDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#C4C4C4"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="2"
            android:stretchColumns="1"
            android:background="#FFFFFF"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/roomname"
                    android:textSize="16sp"/>

                <Spinner
                    android:id="@+id/spRoomNames"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/txt_style"
                    android:entries="@array/roomname"
                    android:paddingLeft="15dp"
                    android:prompt="@string/tips" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/place"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cantchan"
                    android:textSize="16sp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/manager"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/etSupervisor"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent" />
            </TableRow>



        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="2"
            android:stretchColumns="1"
            android:background="#FFFFFF"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/etMeetingDate"
                    android:editable="false"
                    android:focusable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:text="@string/sttime" />
                <Spinner
                    android:id="@+id/spBeginTime"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/txt_style"
                    android:entries="@array/startTime"
                    android:paddingLeft="15dp" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/endtime"
                    android:textSize="16sp"/>

                <Spinner
                    android:id="@+id/spEndTime"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/txt_style"
                    android:entries="@array/endTime"
                    android:paddingLeft="15dp" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="2"
            android:stretchColumns="1"
            android:background="#FFFFFF"
            android:layout_marginBottom="10dp">


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:text="@string/describe"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minLines="3"
                    android:textSize="18sp"
                    android:gravity="top"
                    android:background="@drawable/shape"/>
            </TableRow>


        </TableLayout>

        <Button
            android:id="@+id/btnCheckTimeTable"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_reg_style"
            android:text="@string/seeTimeTable"
            android:textColor="#000000"
            android:textSize="17sp"
            android:onClick="btnToTimeTable"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
