<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bookitem"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="4">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bookdate"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="20160303"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:id="@+id/booking_date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bookcdt"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="已预约"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:id="@+id/booking_state" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/roomname"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="主楼小礼堂"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:id="@+id/booking_address" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/manager"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="张莹"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:id="@+id/director" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/date"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="20160304"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:id="@+id/meeting_date" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/time"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="下午3点-5点"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:id="@+id/meeting_time" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="2"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/describe"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="灯光亮起来音乐响起来！！！"
                    android:textSize="15sp"
                    android:layout_margin="5dp"
                    android:id="@+id/description" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>