<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:background="#EEEEEE"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:collapseColumns="1"
            android:stretchColumns="0" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/txt_style"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:textSize="12sp" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/txt_style"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:textSize="12sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/txtShow"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="12sp"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/btn_reg_style"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login_bg"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
