<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_margin"
    android:background="@drawable/item_frame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4"
        android:padding="@dimen/item_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/room_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="会议室1"
                android:textColor="@color/text_gray11"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/room_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="主楼111"
                android:textColor="@color/text_dimgray"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/vector"
                android:textColor="@color/text_gray11"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/room_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="50"
                android:textColor="@color/text_gray11"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_openTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/item_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opentime"
                android:textColor="@color/text_gray21"
                android:textStyle="bold"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/room_openTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="工作日，8:00-20:00"
                android:textColor="@color/text_gray11"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/room_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/des_height"
            android:maxLines="2"
            android:text="这个实验室音响设施齐全，房间宽敞，整洁又干净，各种棒棒哒棒棒哒棒棒哒哒哒哒哒哒"
            android:ellipsize="end"
            android:textSize="15sp"
            android:textColor="#555555"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/room_authority"
            android:layout_width="@dimen/managerView_width"
            android:layout_height="@dimen/managerView_height"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_margin="@dimen/item_margin"
            android:src="@drawable/manager_head" />
        <TextView
            android:id="@+id/room_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:padding="2dp"
            android:textStyle="bold"
            android:textColor="@color/text_Coral"
            android:background="@drawable/txt_confirm"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>